--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: orange;
 }
 h1{
-    font-size: 70px;
+    font-size: 60px;
     color: rgb(119, 119, 119);
     line-height: 15px;
     
@@ -44,4 +44,17 @@ p{
     width: 75%;
     padding-left: 15%;
 
+}
+#aboutme-img{
+    width: 20%;
+    padding-left: 20%;
+    padding-top: 70px;
+}
+#sec2-bg{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    height: 450px;
+}
+section{
+    border-bottom: 100px solid white;
 }
