--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1{
     line-height: 15px;
     
 }
+h2{
+    color: rgb(119, 119, 119);
+    font-size: 40px;
+}
 a{
     text-decoration: none;
     color: white;
@@ -24,12 +28,18 @@ body{
 
     font-family: 'Roboto', sans-serif;
 }
-p{
+#sec1-para{
     text-align: justify;
     color: rgb(63, 63, 63);
     font-size: 110%;
     padding-right: 200px;
     border-bottom: 25px solid white;
+}
+#aboutme-para{
+    
+    color: rgb(63, 63, 63);
+    font-size: 110%;
+    padding-right: 20%;
 }
 .display{
     display: flex;
@@ -38,7 +48,6 @@ p{
 }
 .half-width{
     width: 50%;
-    border: 2px solid white;
 }
 #sec1-img{
     width: 75%;
@@ -46,14 +55,15 @@ p{
 
 }
 #aboutme-img{
-    width: 20%;
-    padding-left: 20%;
+    width: 40%;
+    padding-left: 40%;
     padding-top: 70px;
 }
 #sec2-bg{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
     height: 450px;
+    
 }
 section{
     border-bottom: 100px solid white;
