--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body{
     
     color: rgb(63, 63, 63);
     font-size: 110%;
-    padding-right: 20%;
     margin-bottom: 100px;
 }
 .display{
@@ -53,19 +52,21 @@ body{
 }
 #sec1-img{
     width: 75%;
-    padding-left: 15%;
+    padding-left: 10%;
 
 }
 #aboutme-img{
-    width: 45%;
-    padding-left: 40%;
-    padding-top: 55px;
+    width: 65%;
+    padding-left: 20%;
+    padding-top: 60px;
+    padding-bottom: 40px;
 }
 #sec2-bg{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
-    height: 450px;
-    
+    background-size: 100% 60%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 section{
     border-bottom: 100px solid white;
@@ -74,10 +75,13 @@ section{
     text-align: center; 
     border-top: 50px solid white;
     border-bottom: 50px solid white;
-    padding-left: 30%;
-    padding-right: 30%;
+    padding-left: 25%;
+    padding-right: 25%;
 }
 #MyRecipies-para{
     color: rgb(63, 63, 63);
     font-size: 110%;
+}
+.FoodImage{
+    width: 25%;
 }
