--- a/style.css
+++ b/style.css
@@ -83,5 +83,19 @@ section{
     font-size: 110%;
 }
 .FoodImage{
-    width: 25%;
+    width: 100%;
+    height: 60%;
+}
+.RecipiesHeading{
+    color: black;
+    line-height: 10px;
+}
+.RecipiesBox{
+    border: 20px solid white;
+    border-radius: 30px;
+    box-shadow: 1px 1px 30px rgb(206, 206, 206);
+    padding: px;
+    margin-right: 40px;
+    margin-left: 40px;
+    
 }
