--- a/style.css
+++ b/style.css
@@ -109,5 +109,14 @@ section{
     border-radius: 15px;
     margin-left: 15%;
     margin-right: 15%;
-
+}
+footer{
+    text-align: center;
+    background-color: rgb(0, 14, 12);
+    height: 180px;
+    color:gray;
+    padding-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 20px;
 }
